Add Register rpc (#17)
